Added some animation.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ flutter:
     - images/cat_tongue.gif
     - images/tears_logo.jpeg
     - images/dogincar.jpg
+    - images/lil_car.png
     - assets/pimpoy.mp3
     - assets/off_limits.mp3
 
