--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nofuss.co.za.flutter_talk_mar_2019">
+    package="nofuss.co.za.flutter_code_workshop">
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -8,7 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="Flutter Talk March 2019"
+        android:label="Flutter Code Workshop"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
