--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: flutter_talk_mar_2019
-description: Sample Flutter application for my March 2019 talk.
+name: flutter_code_workshop
+description: Sample Flutter application for my code workshop.
 
-version: 1.0.0+5
+version: 1.0.0+1
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
